# darkstar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  GEMINI.md  README.md  VERSION  config.default.yaml  config.yaml.bak  config.yaml.pre-arc15-test-backup  docker-compose.yml  history_debug_dump.json  inputs.py  issue_1_dump.txt  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  secrets.example.yaml  test_config_arc14.yaml.bak
alembic/: env.py
backend/: battery_cost.py  config_migration.py  exceptions.py  ha_socket.py  health.py  main.py  recorder.py  validation.py
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md
darkstar/: Dockerfile  config.yaml  run.sh
darkstar-dev/: Dockerfile  config.yaml  run.sh
debugging/: test_rev_f61.py
docs/: ARCHITECTURE.md  BACKLOG.md  CHANGELOG_PLAN.md  DEVELOPER.md  INVERTER_BEHAVIOR_QUESTIONS.md  PLAN.md  RELEASE_NOTES.md  ROLLBACK.md  SETUP_GUIDE.md  USER_MANUAL.md
executor/: actions.py  config.py  controller.py  engine.py  history.py  override.py  profiles.py
frontend/: color-palette.html  index.html  lint_output.txt  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.json
ml/: api.py  bootstrap.py  context_features.py  corrector.py  data_activator.py  evaluate.py  forward.py  pipeline.py  price_features.py  price_forecast.py  price_train.py  regions.json  train.py  training_orchestrator.py  weather.py
planner/: __init__.py  errors.py  pipeline.py  preflight.py  simulation.py  vacation_state.py
profiles/: deye.yaml  fronius.yaml  fronius_logic.md  generic.yaml  schema.yaml  solinteg.yaml  sungrow.yaml  sungrow_logic.md
scripts/: audit_schema.py  bench_dashboard.py  benchmark.py  benchmark_async.py  benchmark_kepler.py  benchmark_solver.py  benchmark_water.py  benchmarks_water.yaml  check_db.py  debug_backfill_sensors.py  debug_cost_reality.py  debug_gaps.py  detect_soc_drops.py  dev-backend.sh  df_inspect.py  diagnose_ml.py  docker-entrypoint.sh  enable_wal_mode.py  health_check.py  insert_mock_price_forecasts.py  lint.sh  profile_deep.py  profile_ml.py  profile_solver_spacing.py  repair_soc.py  run_manual_backfill.py  test_api_direct.py  test_bulk_mode.py  verify_k15.py  (+13 more)
(+823 files in other folders)
